@@ -56,7 +56,7 @@ apply <- function(X, MARGIN, FUN, ...)
         ## to use proper mode and dimension:
         ## The following is still a bit `hackish': use non-empty X
         newX <- array(vector(typeof(X), 1L), dim = c(prod(d.call), 1L))
-        ans <- FUN(if(length(d.call) < 2L) newX[,1] else
+        ans <- forceAndCall(1, FUN, if(length(d.call) < 2L) newX[,1] else
                    array(newX[, 1L], d.call, dn.call), ...)
         return(if(is.null(ans)) ans else if(length(d.ans) < 2L) ans[1L][-1L]
                else array(ans, d.ans, dn.ans))
@@ -68,12 +68,12 @@ apply <- function(X, MARGIN, FUN, ...)
     if(length(d.call) < 2L) {# vector
         if (length(dn.call)) dimnames(newX) <- c(dn.call, list(NULL))
         for(i in 1L:d2) {
-            tmp <- FUN(newX[,i], ...)
+            tmp <- forceAndCall(1, FUN, newX[,i], ...)
             if(!is.null(tmp)) ans[[i]] <- tmp
         }
     } else
        for(i in 1L:d2) {
-           tmp <- FUN(array(newX[,i], d.call, dn.call), ...)
+           tmp <- forceAndCall(1, FUN, array(newX[,i], d.call, dn.call), ...)
            if(!is.null(tmp)) ans[[i]] <- tmp
         }
 
